--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-live": "^2.2.0",
     "react-medium-image-zoom": "^3.1.1",
     "react-outside-click-handler": "^1.2.4",
+    "react-use": "^13.12.2",
     "remark-slug": "^5.1.2",
     "request": "^2.88.0",
     "theme-ui": "^0.2.40",
