--- a/package.json
+++ b/package.json
@@ -50,8 +50,6 @@
     "react-outside-click-handler": "^1.2.4",
     "react-use": "^13.12.2",
     "remark-slug": "^5.1.2",
-    "request": "^2.88.0",
-    "theme-ui": "^0.2.40",
-    "typeface-merriweather": "^0.0.72"
+    "theme-ui": "^0.2.40"
   }
 }
