--- a/package.json
+++ b/package.json
@@ -51,5 +51,27 @@
     "react-use": "^13.12.2",
     "remark-slug": "^5.1.2",
     "theme-ui": "^0.2.40"
+  },
+  "devDependencies": {
+    "@types/node": "^12.12.17",
+    "@typescript-eslint/eslint-plugin": "^2.11.0",
+    "@typescript-eslint/parser": "^2.11.0",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "prettier": "^1.19.1",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.7.3"
+  },
+  "peerDependencies": {
+    "@babel/core": "^7.7.5",
+    "@types/lodash": "^4.14.149",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-helmet": "^5.0.14",
+    "@types/react-medium-image-zoom": "^3.0.0",
+    "@types/theme-ui": "^0.2.5",
+    "prismjs": "^1.17.1",
+    "prop-types": "^15.5.8"
   }
 }
